--- a/Fallout/factions/USSA.html
+++ b/Fallout/factions/USSA.html
@@ -26,7 +26,7 @@
     </div>
     <script src="../clock.js"></script>
     <img class="pagebg" src="../img/pipboy2000.webp"></img>
-    
+
     <div class="screen">
       <div id="navcontainer" class="navcontainer">
         <script src="../pipnav2.js"></script>
@@ -37,10 +37,10 @@
           <img width="100%" height="100%" src="../img/SpacePio.svg" alt="Space Pioneer Emblem">
           <figcaption>USSA Prometheus Mission Patch</figcaption>
         </figure>
-        <p>The Space Pioneers are a semi-isolationist group working and living within the Johnson Space Center, a pre-war United States Space Agency (USSA) facility dedicated to space travel and exploration. Specifically, the R&D and mission control parts of the US Space Program. While referred to as the Space Pioneers in a joking manner by wasters, they refer to themselves as the USSA nad retain the use of their pre-war iconography and terminology, save for having designed a new USSA logo for the post-war era.</p>
-        <p>The Space Pioneers are often compared to the Brotherhood of Steel, and with good reason. They are a semi-isolationist group equipped with advanced technology who have divided themselves into distinct internal groups each with a purpose who are overseen by a single individual and function close to a combination knightly / monastic order. The Space Pioneers plunder pre-war technology, taking certain items by force if need be, and hoard the majority of their technology for themselves.</p>
-        <p>The key differences is the Space Pioneers mission is benevolent. They recruit outside of their faction, often undertake missions for the common good, and offer their assistance to wasters for free or in trade. While they employ violence they do so only as a last resort, prefeing trade and exchange wherever possible. They are well liked by the common people for this, but have made dire enemies with the Houston Technocrats as both groups have warred over certain pieces of salvage in the past.</p>
-        <p>While largely benevolent, the Space Pioneers have a list of things they require for “the Mission”. These things are either irreplaceable or functionally unique, and as such they will do everything in their considerable power to obtain them. Failing to obtain these items is seen as an existential threat for humanity. Not their group. Humanity.</p>
+        <p>The Space Pioneers are a semi-isolationist group working and living within the Johnson Space Center, a pre-war United States Space Agency (USSA) facility dedicated to space travel and exploration. Specifically, the R&D and mission control parts of the US Space Program. While referred to as the Space Pioneers in a joking manner by wasters, they refer to themselves as the USSA and retain the use of their pre-war iconography and terminology, save for having designed a new USSA mission logo for the post-war era.</p>
+        <p>The Space Pioneers see themselves as benevolent protectors of the legacy of the USSA. While they plunder and hoard pre-war technology in a manner similar to the Brotherhood of Steel, they are willing to recruit outside of their faction, often undertake missions for the common good, and even offer substantial assistance to individual wasters for free or at significant discounts. While they are willing to employ violent means, they prefer to do so only as a last resort, preferring trade and exchange wherever possible. As a result, they are relatively well-liked by the common people of the wasteland.</p>
+        <p>However, the Space Pioneers do place an absolute priority on achieving  “the Mission”. As such, they will do everything in their considerable power to obtain specific items which are irreplaceable or functionally unique. Failing to obtain these items is seen as an existential threat to all humanity, and at the end of the day there is nothing the Pioneers will not do to secure them. </p>
+        <p>As a direct result of this policy, the Space Pioneers made dire enemies with the Houston Technocrats, as both groups have warred over certain pieces of salvage in the past and will likely continue to do so.</p>
         <p>The Mission, properly known as Operation Prometheus, is as follows:</p>
         <ol>
           <li>☑ Construct a rocket launch platform and gantry.
@@ -73,7 +73,7 @@
         </div>
         <p>The Space Pioneers are highly intelligent and technologically advanced, with access to cutting-edge equipment and research facilities. They have a deep knowledge of physics, chemistry, and engineering, and are constantly developing new technologies and inventions to improve their lives and the lives of others.</p>
         <p>The Space Pioneers are not a military faction, and they do not seek to conquer or dominate others. Instead, they are focused on creating a better future for all humanity, and are willing to share their knowledge and resources with others who share their vision. They are idealistic and optimistic, and believe that humanity can overcome the challenges of the post-apocalyptic world by working together and using science to solve problems.</p>
-        <p>However, the Space Pioneers are not without their enemies. Some see their technological advances as a threat, and fear that they could become too powerful and dominant. Others see them as naive and unrealistic, and believe that their idealism will ultimately lead to failure and disappointment. The Space Pioneers must navigate these challenges and conflicts as they work to rebuild the space program and create a new future for humanity.</p>
+        <p>However, the Space Pioneers are not without their enemies. Some see their technological advances as a threat, and fear that they could become too powerful and dominant. Others see them as naive and unrealistic, arguing that even if they are successful, they will have used up countless, priceless resources for an incredibly tenuous long-term goal that is only indirectly related to actually saving the world.</p>
 
         <h1>Organization and Culture</h1>
         <p>The Space Pioneers have one of the most clean cut and formal organization systems of any post-war organization. They have no real cultural divisions thanks to the strict upbringing and education provided ot their children and screening ouf outsiders ensuring that all members are laser focused on the Mission. Those who cannot cut it are kicked out. The Pioneers are overseen by the Director of the Johnson Space Center, who is analogous to a king though their power is limited by the Mission Chater. Beneath them are the Facility Directors, a small group consisting of:</p>
@@ -172,6 +172,7 @@
             <p>The Astro-Armor Mk. II integrates the base suit’s jetpack system for improved mobility. The suit is far too heavy to fly with such systems which renders the jetpack more of a “jump pack” which allows the user to ascend vertically 30m in a single bound, and make 80m as a horizontal leap if several well timed burns are used in tandem with a running start.</p>
             <p>The suits have been modified with additional systems to enhance its performance in the wasteland. These include a built-in Geiger counter and atmospheric sensors to warn the wearer of potential hazards, as well as an integrated targeting system with night vision and thermal imaging capabilities for improved visibility in low-light conditions.</p>
             <p>The armor is powered by the same TX-28 MicroFusion Pack found in T-51b power armor (Which the Pioneers can manufacture in limited quantities) and consequently has a operational time longer than the lifespan of its user. Additionally, the Astro-Armor Mk. II has been designed to be easily repairable and maintainable with common wasteland tools and spare parts, making it an ideal choice for the Space Pioneers' scavenging and exploration missions.</p>
+            <p>If only it could be produced in resonable numbers with an affordable cost.</p>
       </div>
     </div>
   </body>
