--- a/Fallout/locations/TexasBadlands.html
+++ b/Fallout/locations/TexasBadlands.html
@@ -63,26 +63,30 @@
             <li><a href="Woodlands.html">The Woodlands</a></li>
             <li><a href="Monsterland.html">Monsterland</a></li>
           </ol>
-        <h1>Factions</h1>
+        <h1>Major Factions</h1>
         <ol style="margin-left: 3%">
           <li><a href="../factions/BayouRaiders.html">The Bayou Raiders</a></li>
           <li><a href="../factions/Technocrats.html">The Houston Technocrats</a></li>
           <li><a href="../factions/GCC.html">The Gulf Coast Confederacy</a></li>
           <li><a href="../factions/RedLine.html">The Red Line Cult</a></li>
-          <li><a href="#">The Mutant Integration Liberation Front</a></li>
+          <li><a href="../factions/MILF.html">The Mutant Integration Liberation Front</a></li>
           <li><a href="../factions/USSA.html">The Space Pioneers</a></li>
-          <li><a href="#">The Scrap Collectors</a></li>
-          <li><a href="#">The Ranchers</a></li>
+          <li><a href="../factions/Austin.html">Austin</a></li>
+          <li><a href="#">The Ironwood Collective</a></li>
+        </ol>
+        <h1>Minor Factions</h1>
+        <ol>
+          <li><a href="../factions/ScrapCollectors.html">The Scrap Collectors</a></li>
+          <li><a href="../factions/Ranchers.html">The Ranchers</a></li>
           <li><a href="#">Southside</a></li>
-          <li><a href="#">Austin</a></li>
-          <li><a href="#">The Cowboy Collective</a></li>
-          <li><a href="#">The Lonestar Militia</a></li>
           <li><a href="#">The Botanicals</a></li>
           <li><a href="#">The Crimson Senators</a></li>
-          <li><a href="#">Faction Relationships</a></li>
-          <li><a href="#">The Ironwood Collective</a></li>
+          <li><a href="#">The Cowboy Collective</a></li>
+          <li><a href="#">The Lonestar Militia</a></li>
+          <li><a href="#">Daughters of Athena</a></li>
           <li><a href="#">The United Tribes of Monsterland</a></li>
         </ol>
+
 
         <ul>
           <li> test</li>
