--- a/Fallout/IndexMap/CrawlMap.html
+++ b/Fallout/IndexMap/CrawlMap.html
@@ -2796,8 +2796,9 @@ var Ranches = L.layerGroup([TheDoubleR, LoneStarRanch, DeadmansGulch, DiamondW, 
 
 //       QUEST LOCATIONS
 // Use <icon name>a for Amber icons.
-var NatGuardArmory = L.marker([29.737057, -95.65062], {icon: Fort2a}).bindPopup("National Guard Armory");
-var QuestLocations = L.layerGroup([NatGuardArmory]);
+var NatGuardArmory = L.marker([29.737057, -95.65062], {icon: Fort2a}).bindPopup("National Guard Armory"),
+		Shelter93 = L.marker([29.908197, -95.736569], {icon: Bunker2a}).bindPopup("Shelter 93");
+var QuestLocations = L.layerGroup([Shelter93]);
 
 //       PLAYER LOCATIONS
 // Use <icon name>b for cyan icons.
@@ -2816,9 +2817,9 @@ var PlayerLocations = L.layerGroup([BaseCamp, TrainStation, StripMall, WaterTowe
 
 //       DM LOCATIONS
 var BillyBunker = L.marker([30.950658, -95.917897], {icon: Bunker2a}).bindPopup("Billy's Bunker"),
-		Shelter93 = L.marker([29.908197, -95.736569], {icon: Bunker2a}).bindPopup("Shelter93");
+		CampSwift = L.marker([30.191516, -97.307574], {icon: Fort2a}).bindPopup("Camp Swift");
 
-var DMLocations = L.layerGroup([BillyBunker, Shelter93]);
+var DMLocations = L.layerGroup([BillyBunker, CampSwift]);
 
 // Add an event listener to the document object that listens for the keydown event
 document.addEventListener('keydown', function(event) {
@@ -2842,6 +2843,7 @@ map.on('zoomend', function() {
 					map.addLayer(Settelments);
 					map.addLayer(vaultMarkers);
 					map.addLayer(PlayerLocations);
+					map.addLayer(QuestLocations);
 	}
 	else {
 					map.removeLayer(Infra);
@@ -2849,6 +2851,7 @@ map.on('zoomend', function() {
 					map.removeLayer(Settelments);
 					map.removeLayer(vaultMarkers);
 					map.removeLayer(PlayerLocations);
+					map.aremoveLayer(QuestLocations);
 			}
 });
 
