--- a/Fallout/IndexMap/CrawlMap.html
+++ b/Fallout/IndexMap/CrawlMap.html
@@ -2823,11 +2823,12 @@ var BaseCamp = L.marker([29.967237, -95.703637], {icon: Camp1b}).bindPopup("Gas 
 		WaterTower = L.marker([29.959994, -95.714288], {icon: WaterPlant1b}).bindPopup("FEMA Water Tower"),
 		JunkYard = L.marker([30.028409, -95.673324], {icon: ScrapYard2b}).bindPopup("Junkyard"),
 		Rad1 = L.marker([29.912284, -95.74225], {icon: Radiation1b}).bindPopup("Radioactive Lakes (deadly)"),
-		Nude = L.marker([30.061524, -95.739227], {icon: Settlement1b}).bindPopup("Nudist Colony"),
+		Nude = L.marker([30.061524, -95.739227], {icon: Settlement1b}).bindPopup("Botanical's Gardens East"),
 		Zenith = L.marker([29.910021, -95.777381], {icon: PowerStation1a}).bindPopup("Zenith Substation"),
-		AbandonedMine = L.marker([29.977403, -95.794275], {icon: Mine1a}).bindPopup("Abandoned Mine?");
+		AbandonedMine = L.marker([29.977403, -95.794275], {icon: Mine1a}).bindPopup("Abandoned Mine?"),
+		Lismore = L.marker([29.9706763, -95.613076], {icon: RuinsB2b}).bindPopup("Lismore Lake Estates");
 
-var PlayerLocations = L.layerGroup([BaseCamp, TrainStation, StripMall, WaterTower, JunkYard, Rad1, Nude, Zenith, AbandonedMine]);
+var PlayerLocations = L.layerGroup([BaseCamp, TrainStation, StripMall, WaterTower, JunkYard, Rad1, Nude, Zenith, AbandonedMine, Lismore]);
 
 //       DM LOCATIONS
 var BillyBunker = L.marker([30.950658, -95.917897], {icon: Bunker2a}).bindPopup("Billy's Bunker"),
