Gnoll War 6 RoE

--- a/misc/miscindex.html
+++ b/misc/miscindex.html
@@ -58,3 +58,6 @@
 
 <h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="ZeluBeqi.html">Warning: Mobile City-Fortress Zelu Beqi</a></h4>
 <p>An article on an ancient Zoman super-construct which is active within a small area of Eyom. Presented so travelers who encounter it do not panic.</p>
+
+<h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="ZeluBeqi.html">Gnoll War Rules of Engagement</a></h4>
+<p>An article on the stratigic and tatical rules created for the 6th Gnoll War by estemed lawyer Mack Mac Moff.</p>
