Gnoll War 6 RoE smol edit

--- a/misc/gnollwar6.html
+++ b/misc/gnollwar6.html
@@ -15,6 +15,7 @@
 <div class="book">
 <h3 class="articletitle">Gnollish Rules of Engagement</h3>
 <p>This document is a simplified version of the Rules of Engagement created for the Sixth Gnoll War <i>(2001 fc - Ongoing)</i> by the estemed layer Mack McMoff. They are posted here for educational and enforcment purposes.</p>
+<p>For contest, a Gnoll War has historicaly been a major conflict on par with the War of Herilk Independence in 928. The Sixth Gnoll War is more of a sport. Described in their own words it is to be a "Medium stakes contact sports for military industrial complexes.".</p>
 <ol>
   <li><b>Article I</b></li>
   <ol>
