--- a/languages/langindex.html
+++ b/languages/langindex.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Index: Eyomic Languages</title>
 <head>
-  <link href="../langcss.css" rel="stylesheet">
+  <link href="../MainStyleSheet.css" rel="stylesheet">
   <link rel="icon" type="../image/x-icon" href="../img/logo.png">
 </head><script src="../scripts/darkmode.js"></script>
 
@@ -26,5 +26,4 @@
     <li><a href="../languages/Wèshèti.html">Wèshèti (Tauric)</a></li>
     <li><a href="../languages/Zdaalish.html">Zdaalish (Wood Elvish)</a></li>
     <li><a href="../languages/Zräysian.html">Zräysian (Gnollish)</a></li>
-    <li><a href="../languages/Z̄oman.html">Z̄oman (Ancient Elvish)</a></li>
   </ul>
