--- a/races/Thiwa.html
+++ b/races/Thiwa.html
@@ -25,7 +25,7 @@
 <h3 class="articletitle">Thiwa</h3>
 <figure style="width: 25%;" class="left">
 <figcaption class="basic"><b>A Thiwa.</b></figcaption>
-<img style="width:100%" src="..\img\races\StrataRunner2.png" alt="A Thiwa." title="A Thiwa." />
+<img style="width:100%" src="..\img\races\StrataRunner2.webp" alt="A Thiwa." title="A Thiwa." />
 </figure>
 
 
